# OpendTect

./: .arcconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  LICENSE.txt  README.md  __init__.py  browse_hdf5_seis.py  chfwscript  common.py  dbman.py  gpuinfo.py  hdf5.py  iopar.py  oscommand.py  pixi.toml  ranges.py  removemakefiles.csh  setup_cvstree  test_ioserv.py  volpreload.py  wellman.py
plugins/: CMakeLists.txt  FaultAutoExtractor  cpdeps
plugins/Annotations/: CMakeLists.txt  annotationspi.cc  measuretoolman.cc  measuretoolman.h  treeitem.cc  treeitem.h  uiarrowdlg.cc  uiarrowdlg.h  uimeasuredlg.cc  uimeasuredlg.h  uiscalebaritem.cc  uiscalebaritem.h  visannotimage.cc  visannotimage.h  visarrow.cc  visarrow.h  viscallout.cc  viscallout.h  visscalebar.cc  visscalebar.h
plugins/AttribExp/: expdeconv.cc  expdeconv.h  expdipview.cc  expdipview.h  expdiscfilter.cc  expdiscfilter.h  expextremedip.cc  expextremedip.h  expfact.h  expgraddip.cc  expgraddip.h  expinverse.cc  expinverse.h  expnearsubtract.cc  expnearsubtract.h  expnodc.cc  expnodc.h  exppcadip.cc  exppcadip.h  expspectrum.cc  expspectrum.h  expvardip.cc  expvardip.h  expwavelet1d.cc  expwavelet1d.h  process_attrib_exp.cc
plugins/Basemap/: CMakeLists.txt  basemapcontour.cc  basemapcontour.h  basemapgeom2d.cc  basemapgeom2d.h  basemapgrid.cc  basemapgrid.h  basemaphorizon3d.cc  basemaphorizon3d.h  basemapline2d.cc  basemapline2d.h  basemapoutline.cc  basemapoutline.h  basemappi.cc  basemappickset.cc  basemappickset.h  basemappolygon.cc  basemappolygon.h  basemaprandomline.cc  basemaprandomline.h  basemapseisoutline.cc  basemapseisoutline.h  basemaptr.cc  basemaptr.h  basemapwell.cc  basemapwell.h  basemapzvalues.cc  basemapzvalues.h
plugins/Bouncy/: CMakeLists.txt  bouncycontroller.cc  bouncycontroller.h  bouncypi.cc
plugins/CEEMDAttrib/: CMakeLists.txt  ceemdalgo.cc  ceemdalgo.h  ceemdattrib.cc  ceemdattrib.h  ceemdattribpi.cc  ceemdtestprogram.h
plugins/CRS/: CMakeLists.txt  crspi.cc  crsproj.cc  crsproj.h  crssystem.cc  crssystem.h
plugins/CmdDriver/: CMakeLists.txt  canvascommands.cc  canvascommands.h  cmdcomposer.cc  cmdcomposer.h  cmddriver.cc  cmddriver.h  cmddriverbasics.cc  cmddriverbasics.h  cmddriverdlg.cc  cmddriverdlg.h  cmddrivermgr.cc  cmddrivermgr.h  cmddriverpi.cc  cmdfunction.cc  cmdfunction.h  cmdrecorder.cc  cmdrecorder.h  coincommands.cc  coincommands.h  command.cc  command.h  drivercommands.cc  drivercommands.h  identifierman.cc  identifierman.h  inputcommands.cc  inputcommands.h  interpretexpr.cc  interpretexpr.h  listcommands.cc  listcommands.h  menubutcommands.cc  menubutcommands.h  objectfinder.cc  objectfinder.h  qtcommands.cc  qtcommands.h  searchkey.cc  searchkey.h  (+4 more)
plugins/EventFreq/: CMakeLists.txt  eventfreqattrib.cc  eventfreqattrib.h  eventfreqpi.cc
plugins/ExpAttribs/: CMakeLists.txt  corrmultiattrib.cc  corrmultiattrib.h  curvgrad.cc  curvgrad.h  eventfreqattrib.cc  eventfreqattrib.h  expattribspi.cc  fkfilterattrib.cc  fkfilterattrib.h  grubbsfilterattrib.cc  grubbsfilterattrib.h  integratedtrace.cc  integratedtrace.h  semblanceattrib.cc  semblanceattrib.h  similaritybyaw.cc  similaritybyaw.h
plugins/ExternalAttrib/: externalattribpi.cc  externalattribrandom.cc  externalattribrandom.h
plugins/GLCM/: CMakeLists.txt  GLCM_attrib.cc  GLCM_attrib.h  GLCM_pi.cc
plugins/GMT/: CMakeLists.txt  gmt2dlines.cc  gmt2dlines.h  gmtarray2dinterpol.cc  gmtarray2dinterpol.h  gmtbasemap.cc  gmtbasemap.h  gmtclip.cc  gmtclip.h  gmtcoastline.cc  gmtcoastline.h  gmtcontour.cc  gmtcontour.h  gmtdef.h  gmtfault.cc  gmtfault.h  gmtlocations.cc  gmtlocations.h  gmtpar.cc  gmtpar.h  gmtpi.cc  gmtprocflow.cc  gmtprocflow.h  gmtprocflowtr.h  initgmt.cc  initgmtplugin.h  od_gmtexec.cc
plugins/GPUCalc/: README  gpucalc.cc  gpucalc.h  gpucalcpi.cc
plugins/GapDecon/: CMakeLists.txt  gapdeconattrib.cc  gapdeconattrib.h  gapdeconpi.cc
plugins/GoogleTranslate/: CMakeLists.txt  googletranslatepi.cc  googletranslator.cc  googletranslator.h  uitranslatedlg.cc  uitranslatedlg.h
plugins/HDF5/: CMakeLists.txt  PreInit.cmake  PreModInit.cmake  hdf5accessimpl.cc  hdf5accessimpl.h  hdf5common.h  hdf5pi.cc  hdf5readerimpl.cc  hdf5readerimpl.h  hdf5supportimpl.cc  hdf5supportimpl.h  hdf5writerimpl.cc  hdf5writerimpl.h
plugins/Hello/: CMakeLists.txt  hellopi.cc
plugins/HorizonAttrib/: CMakeLists.txt  horattribpi.cc  horizonattrib.cc  horizonattrib.h  isopachmaker.cc  isopachmaker.h  od_isopach.cc  od_stratamp.cc  stratamp.cc  stratamp.h
plugins/MATLABLink/: CMakeLists.txt  matlabarray.cc  matlabarray.h  matlablibmgr.cc  matlablibmgr.h  matlablinkpi.cc  matlabstep.cc  matlabstep.h  odmex.par  readcbvs.cc  writecbvs.cc  writesegyindex.cc
plugins/Madagascar/: CMakeLists.txt  maddefs.cc  maddefs.h  madhdr.cc  madhdr.h  madio.cc  madio.h  madpi.cc  madproc.cc  madproc.h  madprocexec.cc  madprocexec.h  madprocflow.cc  madprocflow.h  madprocflowtr.h  madseisio.cc  madseisio.h  madstream.cc  madstream.h  od_madexec.cc
plugins/MadagascarAttribs/: CMakeLists.txt  madagcattrib.cc  madagcattrib.h  madattribspi.cc
plugins/MatlabLink/: CMakeLists.txt  matlabarray.cc  matlabarray.h  matlablibmgr.cc  matlablibmgr.h  matlabpi.cc  matlabstep.cc  matlabstep.h  odmex.par  readcbvs.cc  writesegyindex.cc
plugins/My_Plugin_Name/: CMakeLists.txt  my_first_separate_source.cc  my_first_separate_source.h  my_plugin_name_pi.cc
plugins/ODBind/: CMakeLists.txt  cubedataidx.cc  cubedataidx.h  odbind.cc  odbind.h  odbind_pi.cc  odfault.cc  odfault.h  odgeom_2d.cc  odgeom_2d.h  odhorizon.cc  odhorizon.h  odseismic_2d.cc  odseismic_2d.h  odseismic_3d.cc  odseismic_3d.h  odseismic_object.cc  odseismic_object.h  odsurvey.cc  odsurvey.h  odsurvey_object.cc  odsurvey_object.h  odwell.cc  odwell.h  pytest.ini
plugins/ODHDF5/: CMakeLists.txt  PreInit.cmake  PreModInit.cmake  hdf5accessimpl.cc  hdf5accessimpl.h  hdf5common.h  hdf5readerimpl.cc  hdf5readerimpl.h  hdf5writerimpl.cc  hdf5writerimpl.h  odhdf5.dox  odhdf5pi.cc
plugins/ODQSql/: CMakeLists.txt  odqsql.dox  odqsqlpi.cc  sqlquery.cc  (+3 more)
(+6225 files in other folders)
